--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>MarckTeck</title>
 </head>
 <body>
-    
+    <img src="images/pizzalogo.jpg" height="50px"> <h4>Your best Choice</h4>
+
+<div class="General">
+      <h1>MarckTeck Pizza</h1>  
+    </div>
 </body>
 </html>
