--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MarckTeck</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <img src="images/pizzalogo.jpg" height="50px"> <h4>Your best Choice</h4>
-
-<div class="General">
-      <h1>MarckTeck Pizza</h1>  
+    <div class="General">
+    <img src="images/pizzalogo.jpg" height="50px"><h4>Your best Choice</h4>
+      <h1>MarckTeck Pizza</h1> 
+      <h4>About us</h4>
+      <p>We offered best services to our customers, <br>
+        We have our branches in Parklands, Westlands,Karen Centre and Kitengela,<br>
+        Delivery within Nairobi CBD</p>
+        <br>
+        <br>
+        <p>Contact:0707426544</p>
     </div>
 </body>
 </html>
