--- a/index.html
+++ b/index.html
@@ -19,5 +19,65 @@
         <br>
         <p>Contact:0707426544</p>
     </div>
+    <div class="Cripsy">
+        <h2>Cripsy Pizza</h2>
+        <div class="Crips">
+         <div class="one">
+          <img src="images/pizza cripsy1.jpeg" height="200px">
+           <p>SMALL. Ksh. 500</p>
+           <button>Add to your order</button>
+           </div>
+            <div class="two">
+            <img src="images/pizza cripsy1.jpeg" height="250px">
+            <p>MEDIUM. Ksh. 900</p>
+            <button>Add to your order</button>
+            </div>
+            <div class="three">
+            <img src="images/pizza cripsy1.jpeg" height="300px">
+           <p>BIG</p>
+        <button>Add to your order</button>
+        </div>
+        </div>   
+    </div>
+<div class="Gluten">
+    <h2>Gluten Free Pizza</h2>
+    <div class="Glut">
+     <div class="one">
+      <img src="images/pizza gluten free.jpg" height="200px">
+       <p>SMALL</p>
+       <button>Add to your order</button>
+       </div>
+        <div class="two">
+        <img src="images/pizza gluten free.jpg" height="250px">
+        <p>MEDIUM</p>
+        <button>Add to your order</button>
+        </div>
+        <div class="three">
+        <img src="images/pizza gluten free.jpg" height="300px">
+       <p>BIG</p>
+    <button>Add to your order</button>
+    </div>
+    </div>   
+</div>
+<div class="Stuffed">
+    <h2>Stuffed Pizza</h2>
+    <div class="Stuff">
+     <div class="one">
+      <img src="images/pizza stuffed.jpeg" height="200px">
+       <p>SMALL</p>
+       <button>Add to your order</button>
+       </div>
+        <div class="two">
+        <img src="images/pizza stuffed.jpeg" height="250px">
+        <p>MEDIUM</p>
+        <button>Add to your order</button>
+        </div>
+        <div class="three">
+        <img src="images/pizza stuffed.jpeg" height="300px">
+       <p>BIG</p>
+    <button>Add to your order</button>
+    </div>
+    </div>   
+</div>
 </body>
 </html>
