--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <h2>Stuffed Pizza</h2>
     <div class="Stuff">
      <div class="one">
-      <img src="images/pizza stuffed.jpeg" height="200px">
+      <!-- <img src="images/pizza stuffed.jpeg" height="200px"> -->
        <p>SMALL</p>
        <button>Add to your order</button>
        </div>
