--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <button>Add to your order</button>
         </div>
         <div class="three">
-        <img src="images/pizza gluten free.jpg" height="300px">
+        <!-- <img src="images/pizza gluten free.jpg" height="300px"> -->
        <p>BIG</p>
     <button>Add to your order</button>
     </div>
@@ -63,7 +63,7 @@
     <h2>Stuffed Pizza</h2>
     <div class="Stuff">
      <div class="one">
-      <!-- <img src="images/pizza stuffed.jpeg" height="200px"> -->
+      <img src="images/pizza stuffed.jpeg" height="200px">
        <p>SMALL</p>
        <button>Add to your order</button>
        </div>
