--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MarckTeck</title>
     <link rel="stylesheet" href="index.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="java.js"></script>
 </head>
 <body>
     <div class="General">
@@ -19,6 +21,7 @@
         <br>
         <p>Contact:0707426544</p>
     </div>
+    <div class="All">
     <div class="Cripsy">
         <h2>Cripsy Pizza</h2>
         <div class="Crips">
@@ -53,7 +56,7 @@
         <button>Add to your order</button>
         </div>
         <div class="three">
-        <!-- <img src="images/pizza gluten free.jpg" height="300px"> -->
+        <img src="images/pizza gluten free.jpg" height="300px">
        <p>BIG</p>
     <button>Add to your order</button>
     </div>
@@ -78,6 +81,32 @@
     <button>Add to your order</button>
     </div>
     </div>   
+</div>
+<div class="Toppings">
+    <h1>Pizza Toppings</h1>
+    <div class="Top">
+     <div class="Tone">
+      <img src="images/pizza topping.jpg" height="120px">
+       <p>Ksh. 70</p>
+       <button>Add to your order</button>
+       </div>
+        <div class="Ttwo">
+        <img src="images/pizzatopping2.jpg" height="130px">
+        <p>Ksh. 70</p>
+        <button>Add to your order</button>
+        </div>
+        <div class="Tthree">
+        <img src="images/pizza topping3.jpg" height="100px">
+        <p>Ksh.100</p>
+        <button>Add to your order</button>
+        </div>
+        <div class="Tfour">
+        <img src="images/pizaatopping4.jpg" height="110px">
+       <p>Ksh.100</p>
+     <button>Add to your order</button>
+    </div>
+    </div>   
+</div>
 </div>
 </body>
 </html>
