--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
     </div>
     </div>   
 </div>
+<form class="End">
+    <label for="Total"></label>
+    <input type="text" id="form" placeholder="Date">
+    <label for="name"></label>
+    <input type="text" id="form" placeholder="Time">
+</form>
 </div>
 </body>
 </html>
