--- a/index.html
+++ b/index.html
@@ -114,5 +114,7 @@
     <input type="text" id="form" placeholder="Time">
 </form>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="java.js"></script>
 </body>
 </html>
