--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
     <input type="text" id="form" placeholder="Time">
 </form>
 </div>
+<div class="Order">
+    <p>Do you want Delivery services</p>
+    <input type="radio" name="Place">
+     <label for="Place">
+         Yes
+     </label>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="java.js"></script>
 </body>
