--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 </div>
 <div class="Order">
     <p>Do you want Delivery services</p>
-    <input type="radio" name="Place">
+    <input type="radio" id="Yes" name="Place">
      <label for="Place">
          Yes
      </label>
