--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
      <label for="Place">
          Yes
      </label>
+     <p>Do you want Delivery services</p>
+    <input type="radio" id="No" name="Place">
+     <label for="Place">
+         No
+     </label>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="java.js"></script>
