--- a/index.html
+++ b/index.html
@@ -120,11 +120,12 @@
      <label for="Place">
          Yes
      </label>
-     
+
     <input type="radio" id="No" name="Place">
      <label for="Place">
          No
      </label>
+     <p>If yes enter the place</p>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="java.js"></script>
