--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
          No
      </label>
      <p>If yes enter the place</p>
+     <form class="Home">
+        <label for="Home"></label>
+        <input type="text" id="form" placeholder="Home">
+    </form>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="java.js"></script>
