--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="three">
             <img src="images/pizza cripsy1.jpeg" height="300px">
-           <p>BIG</p>
+           <p>BIG. Ksh. 1500</p>
         <button>Add to your order</button>
         </div>
         </div>   
@@ -107,12 +107,12 @@
     </div>
     </div>   
 </div>
-<form class="End">
+<!-- <form class="End">
     <label for="Total"></label>
     <input type="text" id="form" placeholder="Date">
     <label for="name"></label>
     <input type="text" id="form" placeholder="Time">
-</form>
+</form> -->
 </div>
 <div class="Order">
     <p>Do you want Delivery services</p>
