--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
     <div class="Glut">
      <div class="one">
       <img src="images/pizza gluten free.jpg" height="200px">
-       <p>SMALL</p>
+       <p>SMALL. Ksh. 500</p>
        <button>Add to your order</button>
        </div>
         <div class="two">
         <img src="images/pizza gluten free.jpg" height="250px">
-        <p>MEDIUM</p>
+        <p>MEDIUM. Ksh. 900</p>
         <button>Add to your order</button>
         </div>
         <div class="three">
         <img src="images/pizza gluten free.jpg" height="300px">
-       <p>BIG</p>
+       <p>BIG. Ksh. 1500</p>
     <button>Add to your order</button>
     </div>
     </div>   
@@ -67,17 +67,17 @@
     <div class="Stuff">
      <div class="one">
       <img src="images/pizza stuffed.jpeg" height="200px">
-       <p>SMALL</p>
+       <p>SMALL. Ksh. 500</p>
        <button>Add to your order</button>
        </div>
         <div class="two">
         <img src="images/pizza stuffed.jpeg" height="250px">
-        <p>MEDIUM</p>
+        <p>MEDIUM. Ksh. 900</p>
         <button>Add to your order</button>
         </div>
         <div class="three">
         <img src="images/pizza stuffed.jpeg" height="300px">
-       <p>BIG</p>
+       <p>BIG. Ksh. 1500</p>
     <button>Add to your order</button>
     </div>
     </div>   
