--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         <label for="Home"></label>
         <input type="text" id="form" placeholder="Home">
     </form>
+    <button>Deliver</button>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="java.js"></script>
