--- a/index.html
+++ b/index.html
@@ -105,6 +105,27 @@
        <p>Ksh.100</p>
      <button>Add to your order</button>
     </div>
+    <!-- <div class="Tone">
+        <img src="images/pizza topping.jpg" height="120px">
+         <p>Ksh. 70</p>
+         <button>Add to your order</button>
+         </div>
+          <div class="Ttwo">
+          <img src="images/pizzatopping2.jpg" height="130px">
+          <p>Ksh. 70</p>
+          <button>Add to your order</button>
+          </div>
+          <div class="Tthree">
+          <img src="images/pizza topping3.jpg" height="100px">
+          <p>Ksh.100</p>
+          <button>Add to your order</button>
+          </div>
+          <div class="Tfour">
+          <img src="images/pizaatopping4.jpg" height="110px">
+         <p>Ksh.100</p>
+       <button>Add to your order</button>
+      </div>
+     -->
     </div>   
 </div>
 <!-- <form class="End">
