--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
         <form class="form1">
           <label for="select">Choose the flavor</label>
           <select class="browser-default custom-select custom-select-md mb-3 name" >
-            <option value="Chicago Pizza">Chicago Pizza</option>
-            <option value="Greek Pizza">Greek Pizza</option>
-            <option value="Detroit Pizza">Detroit Pizza</option>
-            <option value="Sicilian Pizza">Sicilian Pizza</option>
-            <option value="St. Louis Pizza">St. Louis Pizza</option>
-            <option value="Neopolitan Pizza">Neopolitan Pizza</option>
+            <option value="Chicago Pizza">Cripsy</option>
+            <option value="Greek Pizza">Gluten</option>
+            <option value="Detroit Pizza">Stuffed</option>
+            <option value="Sicilian Pizza">Gluten</option>
+            <option value="St. Louis Pizza">Stuffed</option>
+            <option value="Neopolitan Pizza">Gluten</option>
           </select>
           <label for="select">Choose the size</label>
           <select class="browser-default custom-select custom-select-md mb-3"id="sizes">
@@ -134,7 +134,7 @@
             <option selected value="0">Select your preferred crust!</option>
             <option value="Crispy">Crispy -- ksh. 70</option>
             <option value="Crunchy">Crunchy -- ksh. 100</option>
-            <option value="Vegan">Munchy-- ksh. 250</option>
+            <option value="Vegan">Munchy-- ksh. 100</option>
           </select>
           <label for="Toppings">Select Your Toppings each at ksh. 100</label><br />
           <div class="custom-control custom-checkbox custom-control-inline">
@@ -155,8 +155,8 @@
         </form>
         <div class="col-sm-7">
           <div id="info">
-            <p>Your order will be processed and delivered within 1 hour.</p>
-            <p>Have exact cash ready to pay your rider.</p>
+            <p>Your order will be processed and delivery will be between 30mins to 1hour.</p>
+            <p>Have exact amount ready to pay the service.</p>
             <p>Reach out to us in case of any changes</p>
             <p id="final">Your Pizza</p>
           </div>
@@ -185,7 +185,7 @@
                     </table>
                         <p id="total"></p>
                         <p id="bill"></p>
-                        <p id="tprice">Delivery fee is 100</p>
+                        <p id="tprice">Delivery fee is 200</p>
                         <p id="message"></p>
                     </div>
                             <button class="btn btn-blue otherPizza">Want another pizza? Add here </button>
@@ -205,30 +205,6 @@
                     </div>
     </div>   
 </div>
-<!-- <form class="End">
-    <label for="Total"></label>
-    <input type="text" id="form" placeholder="Date">
-    <label for="name"></label>
-    <input type="text" id="form" placeholder="Time">
-</form> -->
-</div>
-<div class="Order">
-    <p>Do you want Delivery services</p>
-    <input type="radio" id="Yes" name="Place">
-     <label for="Place">
-         Yes
-     </label>
-
-    <input type="radio" id="No" name="Place">
-     <label for="Place">
-         No
-     </label>
-     <p>If yes enter the place</p>
-     <form class="Home">
-        <label for="Home"></label>
-        <input type="text" id="form" placeholder="Home">
-    </form>
-    <button>Deliver</button>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="java.js"></script>
