--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
         <form class="form1">
           <label for="select">Choose the flavor</label>
           <select class="browser-default custom-select custom-select-md mb-3 name" >
-            <option value="Chicago Pizza">Cripsy</option>
-            <option value="Greek Pizza">Gluten</option>
-            <option value="Detroit Pizza">Stuffed</option>
-            <option value="Sicilian Pizza">Gluten</option>
-            <option value="St. Louis Pizza">Stuffed</option>
-            <option value="Neopolitan Pizza">Gluten</option>
+            <option value="Cripsy Pizza">Cripsy</option>
+            <option value="Gluten Pizza">Gluten</option>
+            <option value="Stuffed Pizza">Stuffed</option>
+            <option value="Gluten Pizza">Gluten</option>
+            <option value="Stuffed Pizza">Stuffed</option>
+            <option value="Gluten Pizza">Gluten</option>
           </select>
           <label for="select">Choose the size</label>
           <select class="browser-default custom-select custom-select-md mb-3"id="sizes">
@@ -133,8 +133,8 @@
           <select class="browser-default custom-select custom-select-md mb-3"id="ppcrust">
             <option selected value="0">Select your preferred crust!</option>
             <option value="Crispy">Crispy -- ksh. 70</option>
-            <option value="Crunchy">Crunchy -- ksh. 100</option>
-            <option value="Vegan">Munchy-- ksh. 100</option>
+            <option value="Gluten">Gluten -- ksh. 100</option>
+            <option value="Stuffed">Stuffed-- ksh. 100</option>
           </select>
           <label for="Toppings">Select Your Toppings each at ksh. 100</label><br />
           
